# Web-App

./: .vale.ini  LICENSE  README.md  docker-compose.yml  docker-config.txt  main.py  pyproject.toml  test.py
website/: __init__.py  admin.py  auth.py  models.py  views.py
website/static/: 2fa.css  contact.css  errors.css  login.css  sign-up.css
website/templates/: contact.html  home.html  layout.html  login.html  sign_up.html  two-factor-setup.html
website/templates/errors/: 302.html  401.html  404.html  429.html
